// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots molecules|Group default 1`] = `
.c0 {
  padding: 12px;
}

.c2 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c2:first-child {
  margin-top: 0;
}

.c2:last-child {
  margin-bottom: 0;
}

.c2,
input.c2 {
  font-size: 1.5em;
}

.c2 .c5 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c7 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c8 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c9 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c10 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c11 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c12 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c13 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c14 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c15 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c16 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c17 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c18 .c5 {
  font-size: 1.5em;
}

.c19 .c5 {
  font-size: 1.5em;
}

.c20 .c5 {
  font-size: 1.5em;
}

.c21 .c5 {
  font-size: 1.5em;
}

.c22 .c5 {
  font-size: 1.5em;
}

.c23 .c5 {
  font-size: 1.5em;
}

.c24 .c5 {
  font-size: 1.5em;
}

.c25 .c5 {
  font-size: 1.5em;
}

.c26 .c5 {
  font-size: 1.5em;
}

.c27 .c5 {
  font-size: 1.5em;
}

.c28 .c5 {
  font-size: 1.5em;
}

.c29 .c5 {
  font-size: 1.5em;
}

.c30 .c5 {
  font-size: 1.5em;
}

.c31 .c5 {
  font-size: 1.5em;
}

.c4 {
  width: 100%;
  height: 0;
  margin: 20px 20px;
}

.c3 {
  font-size: 28px;
  color: #999;
  margin: 0;
}

.c6 {
  height: 1em;
  line-height: 1em;
  text-transform: none;
  margin-top: 8px;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-size: 16px;
  width: 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 10px;
}

<div
  className="c0"
>
  <h1
    className="c1 c2"
    type="header"
  >
    <span
      className="c3"
    >
      Configuration
    </span>
    <hr
      className="c4"
    />
    <span
      className="c5 c6"
      data-test="group-collapser"
      onClick={[Function]}
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"
        />
      </svg>
    </span>
  </h1>
  <div>
    Dolorem expedita fuga aut qui id beatae id sit. Et qui praesentium sunt fugit ea accusantium a. Maiores qui iure maxime quo qui voluptatibus qui qui. Tempore voluptatum dicta et doloribus ea.
 
Asperiores eaque et est eaque consequuntur quisquam dolorum est aut. Ut odit alias minima hic omnis et. Quibusdam excepturi repudiandae porro ratione beatae nesciunt et amet quo. Optio et iste doloribus eos quo maxime. Voluptatem voluptates repellat in sunt magnam rerum quia. Sed necessitatibus vel officiis ratione pariatur.
 
Illum qui enim veniam voluptatibus doloribus ut et. Et ipsam est voluptates quia consequatur et. Quae excepturi tempora itaque voluptas doloremque. Porro atque necessitatibus est accusantium.
 
Nemo voluptas rerum eos rerum natus sint. Ut qui aut et dolores nostrum suscipit aut. In sed enim qui sint quo sint cupiditate molestiae neque.
  </div>
</div>
`;

exports[`Storyshots molecules|Group helpers 1`] = `
.c0 {
  padding: 12px;
}

<div
  className="c0"
/>
`;

exports[`Storyshots molecules|Group x-inverted 1`] = `
.c0 {
  padding: 12px;
}

.c2 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c2:first-child {
  margin-top: 0;
}

.c2:last-child {
  margin-bottom: 0;
}

.c2,
input.c2 {
  font-size: 1.5em;
}

.c2 .c3 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c7 .c3 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c8 .c3 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c9 .c3 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c10 .c3 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c11 .c3 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c12 .c3 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c13 .c3 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c14 .c3 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c15 .c3 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c16 .c3 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c17 .c3 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c18 .c3 {
  font-size: 1.5em;
}

.c19 .c3 {
  font-size: 1.5em;
}

.c20 .c3 {
  font-size: 1.5em;
}

.c21 .c3 {
  font-size: 1.5em;
}

.c22 .c3 {
  font-size: 1.5em;
}

.c23 .c3 {
  font-size: 1.5em;
}

.c24 .c3 {
  font-size: 1.5em;
}

.c25 .c3 {
  font-size: 1.5em;
}

.c26 .c3 {
  font-size: 1.5em;
}

.c27 .c3 {
  font-size: 1.5em;
}

.c28 .c3 {
  font-size: 1.5em;
}

.c29 .c3 {
  font-size: 1.5em;
}

.c30 .c3 {
  font-size: 1.5em;
}

.c31 .c3 {
  font-size: 1.5em;
}

.c5 {
  width: 100%;
  height: 0;
  margin: 20px 20px;
}

.c6 {
  font-size: 28px;
  color: #999;
  margin: 0;
}

.c4 {
  height: 1em;
  line-height: 1em;
  text-transform: none;
  margin-top: 8px;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-size: 16px;
  width: 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 10px;
}

<div
  className="c0"
>
  <h1
    className="c1 c2"
    type="header"
  >
    <span
      className="c3 c4"
      data-test="group-collapser"
      onClick={[Function]}
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"
        />
      </svg>
    </span>
    <hr
      className="c5"
    />
    <span
      className="c6"
    >
      Configuration
    </span>
  </h1>
  <div>
    Quis inventore recusandae rerum itaque in nulla vel et rerum. Consequuntur dicta voluptate tempora. Ipsam voluptatem quia vero est.
 
Tenetur illum dolorem amet odio cumque. Labore debitis sunt deleniti. In inventore ad tempora ab.
 
Dolores omnis occaecati dolor. Qui sunt non repellat. Illum qui deserunt. Reiciendis corporis ut voluptas. Et aperiam quo explicabo adipisci et quasi.
 
Autem voluptatem aut id dolorem tenetur aut esse assumenda adipisci. Dolorem harum fuga libero inventore voluptatum voluptas perferendis voluptatibus. Est quos non qui qui. Odio blanditiis laborum eos voluptatem aut.
  </div>
</div>
`;

exports[`Storyshots molecules|Group xy-inverted 1`] = `
.c0 {
  padding: 12px;
}

.c2 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c2:first-child {
  margin-top: 0;
}

.c2:last-child {
  margin-bottom: 0;
}

.c2,
input.c2 {
  font-size: 1.5em;
}

.c2 .c3 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c7 .c3 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c8 .c3 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c9 .c3 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c10 .c3 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c11 .c3 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c12 .c3 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c13 .c3 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c14 .c3 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c15 .c3 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c16 .c3 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c17 .c3 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c18 .c3 {
  font-size: 1.5em;
}

.c19 .c3 {
  font-size: 1.5em;
}

.c20 .c3 {
  font-size: 1.5em;
}

.c21 .c3 {
  font-size: 1.5em;
}

.c22 .c3 {
  font-size: 1.5em;
}

.c23 .c3 {
  font-size: 1.5em;
}

.c24 .c3 {
  font-size: 1.5em;
}

.c25 .c3 {
  font-size: 1.5em;
}

.c26 .c3 {
  font-size: 1.5em;
}

.c27 .c3 {
  font-size: 1.5em;
}

.c28 .c3 {
  font-size: 1.5em;
}

.c29 .c3 {
  font-size: 1.5em;
}

.c30 .c3 {
  font-size: 1.5em;
}

.c31 .c3 {
  font-size: 1.5em;
}

.c5 {
  width: 100%;
  height: 0;
  margin: 20px 20px;
}

.c6 {
  font-size: 28px;
  color: #999;
  margin: 0;
}

.c4 {
  height: 1em;
  line-height: 1em;
  text-transform: none;
  margin-top: 8px;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-size: 16px;
  width: 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 10px;
}

<div
  className="c0"
>
  <div>
    Aut nihil doloremque deleniti et consequuntur autem reiciendis est nesciunt. Sed recusandae et provident ea ducimus. Voluptas qui nisi amet. Facilis ducimus facere. Non aut animi vel placeat sapiente quidem nemo mollitia non.
 
Minus ea rerum. Nihil molestiae dolor. Illo temporibus fugiat placeat consectetur. Qui vitae ullam velit beatae architecto.
 
Quis quisquam provident ducimus dolores in magni sed quia quisquam. Nulla molestias similique. Est ex ut odit saepe. Animi odit repellendus maiores temporibus dolor voluptatibus sunt nobis. Et repellendus quasi. Provident non qui quod.
 
Voluptatem omnis ducimus numquam. Omnis nulla est illum quia voluptatem eos. Sit non eos suscipit natus nihil ea est possimus quia. Maxime maiores reiciendis minima esse alias sunt recusandae.
  </div>
  <h1
    className="c1 c2"
    type="header"
  >
    <span
      className="c3 c4"
      data-test="group-collapser"
      onClick={[Function]}
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"
        />
      </svg>
    </span>
    <hr
      className="c5"
    />
    <span
      className="c6"
    >
      Configuration
    </span>
  </h1>
</div>
`;

exports[`Storyshots molecules|Group y-inverted 1`] = `
.c0 {
  padding: 12px;
}

.c2 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c2:first-child {
  margin-top: 0;
}

.c2:last-child {
  margin-bottom: 0;
}

.c2,
input.c2 {
  font-size: 1.5em;
}

.c2 .c5 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c7 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c8 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c9 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c10 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c11 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c12 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c13 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c14 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c15 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c16 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c17 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c18 .c5 {
  font-size: 1.5em;
}

.c19 .c5 {
  font-size: 1.5em;
}

.c20 .c5 {
  font-size: 1.5em;
}

.c21 .c5 {
  font-size: 1.5em;
}

.c22 .c5 {
  font-size: 1.5em;
}

.c23 .c5 {
  font-size: 1.5em;
}

.c24 .c5 {
  font-size: 1.5em;
}

.c25 .c5 {
  font-size: 1.5em;
}

.c26 .c5 {
  font-size: 1.5em;
}

.c27 .c5 {
  font-size: 1.5em;
}

.c28 .c5 {
  font-size: 1.5em;
}

.c29 .c5 {
  font-size: 1.5em;
}

.c30 .c5 {
  font-size: 1.5em;
}

.c31 .c5 {
  font-size: 1.5em;
}

.c4 {
  width: 100%;
  height: 0;
  margin: 20px 20px;
}

.c3 {
  font-size: 28px;
  color: #999;
  margin: 0;
}

.c6 {
  height: 1em;
  line-height: 1em;
  text-transform: none;
  margin-top: 8px;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-size: 16px;
  width: 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 10px;
}

<div
  className="c0"
>
  <div>
    Enim voluptatem asperiores maiores dolorem eius laudantium laboriosam quidem. Eaque facere aliquam laudantium accusamus consequuntur eos. Sit quas est tempore accusamus.
 
Magni qui voluptatem eos occaecati. Consequatur qui perferendis aut tempore optio est facere ducimus in. Dolores facilis consequatur consequatur odit atque suscipit vero error eum. Est praesentium tempore vel culpa dolore ad. Natus aut tempore unde aliquid dolore. Aut adipisci dolore placeat magnam nostrum et est voluptatem.
 
Consequatur vel ex aperiam numquam nulla assumenda. Nemo reiciendis minus inventore maxime neque. Sit numquam ut velit. Qui quos autem minus accusantium.
 
Et tempore distinctio. Est vitae dolorem incidunt nobis quia animi sint expedita. Sint omnis quasi corporis rem fugiat atque iusto.
  </div>
  <h1
    className="c1 c2"
    type="header"
  >
    <span
      className="c3"
    >
      Configuration
    </span>
    <hr
      className="c4"
    />
    <span
      className="c5 c6"
      data-test="group-collapser"
      onClick={[Function]}
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"
        />
      </svg>
    </span>
  </h1>
</div>
`;
